--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal-dialog": "^4.0.7",
     "react-redux": "^5.0.7",
+    "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
