--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal-dialog": "^4.0.7",
+    "react-notify-toast": "^0.4.0",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^2.0.1",
     "react-router-dom": "^4.2.2",
